--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.13",
-    "@heroicons/react": "^2.0.16",
+    "@heroicons/react": "^2.0.17",
+    "@lexical/react": "^0.9.1",
+    "@lexical/selection": "^0.9.1",
+    "@types/quill": "^2.0.10",
+    "lexical": "^0.9.1",
     "next": "13.2.4",
+    "quill": "^1.3.7",
+    "quill-image-resize": "^3.0.9",
+    "quill-image-resize-module": "^3.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-quill": "^2.0.0",
     "react-tailwindcss-datepicker": "^1.5.1"
   },
   "devDependencies": {
